[package]
name = "wasm-mima"
version = "0.2.1"
edition = "2021"
authors = ["Yannis Storrer"]
license = "GPL-3.0"
description = "Web Assembly API for the MIMA Cpu."
repo = "https://github.com/stannls/mima-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.4"
wasm-bindgen = "0.2.92"
